--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,11 @@ h1
 }
 .T1
 {
- 		background-color: pink;
+ 		background-color: #d59898;
 }
 .T2
 {
- 		background-color: yellowgreen;
+ 		background-color: c54745;
 }
  	
 .T3
